--- a/public/backend/css/main.css
+++ b/public/backend/css/main.css
@@ -2,12 +2,23 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: 13px;
     font-weight: 300;
+    color: #646c9a !important;
 }
 
 .fa {
     color: #CCCC00 !important;
     font-size: 20px;
     padding-right: 5px;
+}
+
+.far {
+    font-size: 1.2rem;
+    margin: 5px;
+}
+
+.fas {
+    font-size: 1.2rem;
+    margin: 5px;
 }
 
 .fa-italic{
@@ -67,4 +78,54 @@ body{
 
 strong {
     font-weight: bold;
+}
+
+.btn-enregistrer {
+    background-color:#1dc9b7;
+    border-color:#1dc9b7;
+    color: white;
+}
+
+.btn-retour {
+    background-color:#fd397a;
+    border-color:#fd397a;
+    color: white;
+}
+
+.sticky-toolbar {
+    width: 46px;
+    position: fixed;
+    top: 30%;
+    right: 0;
+    list-style: none;
+    padding: 5px 0;
+    margin: 0;
+        margin-top: 0px;
+    z-index: 50;
+    background:    #fff;
+    -webkit-box-shadow: 0px 0px 50px 0px rgba(82, 63, 105, 0.15);
+    box-shadow: 0px 0px 50px 0px rgba(82, 63, 105, 0.15);
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.toolbar-items {
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+    width: 100%;
+}
+
+.close-modal {
+    top: 15px !important;
+    right: 11px !important;
 }
