--- a/templates/back_end/utilisateurs/droits/edit_access_user.html.twig
+++ b/templates/back_end/utilisateurs/droits/edit_access_user.html.twig
@@ -1,43 +1,52 @@
-{% extends "back_end/base.html.twig" %}
+ <style>
+   .modal{
+       margin-top: 35px;
+       max-width: 1100px;
+   } 
+ </style>
 
-{% block menu_header %}
-    {% include "back_end/utilisateurs/__header.html.twig" %}
-{% endblock %}
+ <div class="row justify-content-center mt-5">
+    <div class="col-10 text-center">
+        <h6 class="text-center my-5"> Modification Droit <strong>par user</strong></h6>
+            {{form_start(form, {'action': path('edit_acces_user', {'id': id}), 'method': 'POST'})}}
 
-{% block contenu %}
-    {{ form_start(form)}}
-    {{ form_row(form.services)}}
-    {{ form_row(form.valide)}}
-    {{ form_row(form.roles)}}
-    {{ form_row(form.nom)}}
-    {{ form_row(form.prenom)}}
-    {{ form_row(form.email)}}
-    <div class="row form-group">
-        {{ form_label(form.password) }}
-        <div class="input-group col-sm-12">
-            <div class="input-group-prepend">
-                <button id="passwd-generator" class="btn btn-secondary" type="button" title="Générer un mot de passe"><i class="fa fa-cogs"></i></button>
+            <div class="row form-group text-right align-items-center">
+                {{ form_label(form.nom, 'Nom', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.nom, {'disabled' : true}) }}
+                </div>
             </div>
-            {{ form_widget(form.password) }}
-        </div>
+            <div class="row form-group text-right align-items-center">
+                {{ form_label(form.prenom, 'Prenom', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.prenom, {'disabled' : true}) }}
+                </div>
+            </div>
+            <div class="row form-group text-right align-items-center">
+                {{ form_label(form.email, 'Mail', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.email, {'disabled' : true}) }}
+                </div>
+            </div>
+
+            <div class="offset-lg-2 text-left">
+                {{ form_label(form.services, 'Services', {'label_attr' : {'class': 'col-sm-10 col-form-label text-center mt-4'}}) }}
+                {% for check in form.services %}
+                    <div class="form-check">
+                        {{ form_widget(check)}}
+                        {{ form_label(check)}}
+                    </div>
+                {% endfor %}
+            </div>
+
+
+            <div class="row form-group text-right">
+                <div class="input-group col-sm-12">
+                    {{ form_widget(form.submit) }}
+
+                </div>
+            </div>
+
+        {{ form_end(form, {'render_rest': false})}}
     </div>
-
-    {{ form_row(form.submit)}}
-{{ form_end(form)}}
-{% endblock %}
-
-{% block javascripts %}
-{{ parent() }}
-
-<script>
-    $('#passwd-generator').on('click', function(){
-        var text = "";
-        var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-        
-        for (var i = 0; i < 15; i++)
-            text += possible.charAt(Math.floor(Math.random() * possible.length));
-        
-        $('#user_password').val(text);
-    });
-</script>
-{% endblock %}
+</div>
