réparation d'erreur sur le modules utilisateurs

--- a/templates/back_end/utilisateurs/droits/liste_users.html.twig
+++ b/templates/back_end/utilisateurs/droits/liste_users.html.twig
@@ -57,10 +57,10 @@
         }
 
         function rolesFormatter(value, row, index) {
-            var roles = row["roles"];
+            var roles = row["droits"];
             var txt =[];
-            for(var i in roles)
-            {
+
+            for(var i in roles) {
                 switch (roles[i]) {
                 case "ROLE_SUPERADMIN":
                     txt.push("Super administrateur, ") 
