--- a/templates/back_end/continents/continents_add.html.twig
+++ b/templates/back_end/continents/continents_add.html.twig
@@ -5,10 +5,10 @@
    } 
  </style>
 
-{{ form_start(form, {'action': path('edit_volet_infos_visa_classic', {'id': id}), 'method': 'POST'})}}
+{{ form_start(form, {'action': path('add_continent'), 'method': 'POST'})}}
 
 <div class="row">
-    <h5 class=" m-auto col-8"><i class="fa fa-globe"></i>  Modification de continent </h5>
+    <h5 class=" m-auto col-8"><i class="fa fa-globe"></i>  Ajout de continent </h5>
 </div>
 
 <div class="row justify-content-center mt-5">
