--- a/public/backend/css/main.css
+++ b/public/backend/css/main.css
@@ -51,10 +51,6 @@ body{
     font-size: 13px;
 }
 
-.kt-badge.kt-badge--inline.kt-badge--lg {
-    padding: 0.9rem 0.7rem;
-}
-
 .kt-badge.kt-badge--rounded {
     border-radius: 0;
 }
@@ -70,11 +66,11 @@ body{
     background:#5578eb;
 }
 
-.kt-badge.kt-badge--lg {
+/* .kt-badge.kt-badge--lg {
     height: 35px;
     width: 35px;
     font-size: 1rem !important;
-}
+} */
 
 strong {
     font-weight: bold;
@@ -128,4 +124,14 @@ strong {
 .close-modal {
     top: 15px !important;
     right: 11px !important;
+}
+
+.fixed-table-toolbar {
+    margin-top: 1.5rem;
+}
+
+.fht-cell {
+    position: absolute ;
+    bottom: 101%;
+    left: 20%;
 }
