--- a/templates/back_end/home/home_edit.html.twig
+++ b/templates/back_end/home/home_edit.html.twig
@@ -1,17 +1,42 @@
 {% extends "back_end/base.html.twig" %}
 
-
 {% block contenu %}
-    {% form_theme form '/back_end/jquery.collection.html.twig' %}
+{{ form_start(form)}}
 
-    {{ form(form)}}
+<div class="row">
+    <h5 class=" m-auto col-8"><i class="fa fa-globe"></i>  Modification page d'accueil   </h5>
+    <div class="col-4 text-right pr-5">
+        <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+    </div>
+</div>
+
+<div class="row justify-content-center mt-5">
+    <div class="col-10 text-center">    
+                
+            <div class="row form-group text-right">
+                {{ form_label(form.titre, 'Titre de la page', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.titre) }}
+                </div>
+            </div>
+            
+            <div class="row form-group text-right">
+                {{ form_label(form.meta, 'Fiche méta', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.meta) }}
+                </div>
+            </div>
+            <h1>Signature</h1>
+            <div class="signature mt-2" style="border: dotted 1px #000; height: 50vh; width: 100%;"></div>
+
+            <ul class="sticky-toolbar">
+                <li class="toolbar-items">
+                    <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> </a>
+                </li>
+            </ul>
+        {{ form_end(form, {'render_rest': false})}}
+    </div>
+</div>
 {% endblock %}
 
 
-{% block javascripts %}
-    {{ parent() }}
-    <script type="text/javascript" src="{{ asset('backend/js/jquery.collection.js') }}"></script>
-    <script type="text/javascript">
-        $('.my-selector').collection();
-    </script>
-{% endblock %}
