--- a/templates/back_end/note_de_course/signature_note_de_course_add.html.twig
+++ b/templates/back_end/note_de_course/signature_note_de_course_add.html.twig
@@ -2,10 +2,47 @@
 
 
 {% block contenu %}
-    <h1 class="text-center"> Signature </h1>
-    <div class="signature mt-2" style="border: dotted 1px #000; height: 50vh; width: 80vw;"></div>
-    {{ form(form) }}
+{{ form_start(form)}}
+
+<div class="row">
+    <h5 class=" m-auto col-8"><i class="fa fa-globe"></i>  Signature   </h5>
+    <div class="col-4 text-right pr-5">
+        <a href="{{path('show_liste_notes_de_course')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> Retour </a>
+        <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+    </div>
+</div>
+
+<div class="row justify-content-center mt-5">
+    <div class="col-10 text-center">    
+                
+            <div class="row form-group text-right">
+                {{ form_label(form.nom, 'Nom', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.nom) }}
+                </div>
+            </div>
+            <div class="row form-group text-right">
+                {{ form_label(form.prenom, 'Prénom', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.prenom) }}
+                </div>
+            </div>
+            <h1>Signature</h1>
+            <div class="signature mt-2" style="border: dotted 1px #000; height: 50vh; width: 100%;"></div>
+
+            <ul class="sticky-toolbar">
+                <li class="toolbar-items">
+                    <a href="{{path('show_liste_notes_de_course')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> </a>
+                </li>
+                <li class="toolbar-items">
+                    <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> </a>
+                </li>
+            </ul>
+        {{ form_end(form, {'render_rest': false})}}
+    </div>
+</div>
 {% endblock %}
+
 
 {% block javascripts %}
     {{ parent() }}
