--- a/templates/back_end/pays/pays_edit.html.twig
+++ b/templates/back_end/pays/pays_edit.html.twig
@@ -2,5 +2,47 @@
 
 
 {% block contenu %}
-{{ form(form)}}
+{{ form_start(form)}}
+
+<div class="row">
+    <h5 class=" m-auto col-8"><i class="fa fa-globe"></i>  {% if app.request.attributes.get('_route') == 'edit_pays' %} Modification de pays générique {% else %} Ajout de pays générique {% endif %}   </h5>
+    <div class="col-4 text-right pr-5">
+        <a href="{{path('show_pays')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> Retour </a>
+        <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> Enregistrer </a>
+    </div>
+</div>
+
+<div class="row justify-content-center mt-5">
+    <div class="col-10 text-center">    
+                
+            <div class="row form-group text-right">
+                {{ form_label(form.zoneGeographique, 'Zone géographique', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.zoneGeographique) }}
+                </div>
+            </div>
+            <div class="row form-group text-right">
+                {{ form_label(form.titre, 'Libellé', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.titre) }}
+                </div>
+            </div>
+            <div class="row form-group text-right">
+                {{ form_label(form.iso, 'Code ISO', {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                <div class="input-group col-sm-10">
+                    {{ form_widget(form.iso) }}
+                </div>
+            </div>
+            <ul class="sticky-toolbar">
+                <li class="toolbar-items">
+                    <a href="{{path('show_pays')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> </a>
+        
+                </li>
+                <li class="toolbar-items">
+                    <button type="submit" class="btn btn-enregistrer"><i class="fas fa-save"></i> </a>
+                </li>
+            </ul>
+        {{ form_end(form, {'render_rest': false})}}
+    </div>
+</div>
 {% endblock %}
